Change Raptor to use ConnectorPageSink interface